Criado através do Colab

--- a/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
+++ b/CDD_ML_Part_3_Acetylcholinesterase_Descriptor_Dataset_Preparation.ipynb
@@ -3360,11 +3360,21 @@
       "cell_type": "markdown",
       "source": [
         "# **PART_4**\n",
-        "** NOW WELCOME TO PART_4, OF BIOINFORMATICS FROM SCRATCH SERIES WHERE WE 'LL SHOW HOW TO DO A BIOINFORMATICS PROJECT USING MACHINE LEARNING IN A STEP BY STEP**"
+        "** NOW WELCOME TO PART_4, OF BIOINFORMATICS FROM SCRATCH SERIES WHERE WE 'LL SHOW HOW TO DO A BIOINFORMATICS PROJECT USING MACHINE LEARNING IN A STEP BY STEP MANNER SO IN THIS VIDEO SECTION WE'RE GOING TO BUILD A SIMPLE REGRESSION MODEL BASED ON THE RANDOM FOREST ALGORITHM AND THE DATASET THAT WE'RE USING IS BASED ON THE ACETHYLCHOLINESTERASE INHIBITORS WHICH IS DERIVED FROM THE PREVIOUS TUTORIAL \"VIDEOS\", AND SO WITHOUT FURTHER DO LET'S GET STARTED, SO 1ST THING THAT WE'LL GONNA DO IS HEAD OVER TO THE GITHUB OF THE DATAPROFESSOR AND THEN WE WANT TO CLICK ON THE CODE LINK AND THEN CLICK ON \"PYTHON\" AND THEN WE WANT TO FIND \"CDD_ML_Part_4_Acetylcholinesterase_Regression_Random_Forest.ipynb\", AND SO IF WE HAVEN'T YET GONE THROUGH THE PREVIOUS 3 CHAPTERS HERE, PLEASE MAKE SURE TO GO THRFOUGH THAT IN THE PROVIDED PLAYLIST UP IN THE DATPROFESSOR. AND SO WEWANNA CLICK ON THE PART_4 AND THEN RIGHT CLICK ON THE RAW LINK AND THEN SAVE IT IN TO OUR COMPUTER.\n",
+        "SO LET'S GET STARTED: [1:02:59] **"
       ],
       "metadata": {
         "id": "wSe1LLzwJsd4"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "syVqPoXCdAaR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
