Criado através do Colab

--- a/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
+++ b/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +13,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fernandotoscano/BIOINFORMATICS/blob/main/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -51,7 +62,7 @@
         "\n",
         "_AND NOW TO **PART_5** LET'S GET STARTED:\n",
         "SO HERE WE'RE GOING TO COMPARE SEVERAL MACHINE LEARNING ALGORITHM USING THE \"lazypredict\" LIBRARY.\n",
-        "AND SO THE 1ST THING THAT WE NEED TO DO IS (DOWNLOAD THE FILE FROM DATA PROFESSOR/CODE/PYTHON \"CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb\" TO OUR COMPUTER, AND START IN THE NOTEBOOK)**"
+        "AND SO THE 1ST THING THAT WE NEED TO DO IS AFTER DOWNLOADED THE FILE FROM DATA PROFESSOR/CODE/PYTHON \"CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb\" TO OUR COMPUTER, AND START THE NOTEBOOK, IS INSTALL THE LAZT PREDICT AND SO IN A PRIOR WE'VE SHOWN HOW WE COULD USE THE \"LAZYPREDICT\" TO DO A QUICK AND RAPID MODEL BUILDING OF CLASSIFICATION AND ALSO A REGRESSION MODEL IN JUST A FEW LINES OF CODE. AND SO LET'S START BY INSTALLING THE LIBRARY:**"
       ],
       "metadata": {
         "id": "Oofu5vibSQgC"
@@ -73,25 +84,49 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4i2iuTlZYvQ",
-        "outputId": "1172a063-ee94-4abe-a8a8-fa0b0ba1073e"
+        "outputId": "9f4152a3-93c6-4867-bf3f-8dee76d45a00"
       },
       "source": [
         "! pip install lazypredict"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting lazypredict\n",
-            "  Downloading https://files.pythonhosted.org/packages/5f/db/1566dca1050ea74e9474dca0f1e7bbffcb0c3e694cf92e7e6e7ef9fca3af/lazypredict-0.2.7-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: Click>=7.0 in /usr/local/lib/python3.6/dist-packages (from lazypredict) (7.1.2)\n",
+            "  Downloading lazypredict-0.2.13-py2.py3-none-any.whl.metadata (12 kB)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.11/dist-packages (from lazypredict) (8.1.8)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.11/dist-packages (from lazypredict) (1.6.1)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from lazypredict) (2.2.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from lazypredict) (4.67.1)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.11/dist-packages (from lazypredict) (1.4.2)\n",
+            "Requirement already satisfied: lightgbm in /usr/local/lib/python3.11/dist-packages (from lazypredict) (4.5.0)\n",
+            "Requirement already satisfied: xgboost in /usr/local/lib/python3.11/dist-packages (from lazypredict) (2.1.3)\n",
+            "Requirement already satisfied: numpy>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from lightgbm->lazypredict) (1.26.4)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from lightgbm->lazypredict) (1.13.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->lazypredict) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->lazypredict) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->lazypredict) (2025.1)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn->lazypredict) (3.5.0)\n",
+            "Requirement already satisfied: nvidia-nccl-cu12 in /usr/local/lib/python3.11/dist-packages (from xgboost->lazypredict) (2.21.5)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->lazypredict) (1.17.0)\n",
+            "Downloading lazypredict-0.2.13-py2.py3-none-any.whl (12 kB)\n",
             "Installing collected packages: lazypredict\n",
-            "Successfully installed lazypredict-0.2.7\n"
-          ],
-          "name": "stdout"
+            "Successfully installed lazypredict-0.2.13\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**AND NOW WE'RE GOING TO BE IMPORTING THE NECESSARY LABRARIES AND SO HERE WE'RE USING THE PANDAS, SEABORN AND ALSO THE SCIKIT LEARN LIBRARY, SPECIFICALLY WE'RE IMPORTING THE TRAIN TEST SPLIT FUNCTION AND THEN WE'RE GOING TO BE IMPORTING THE LAZYPREDICT AND ALSO THE LAZY REGRESSOR FUNCTION:**"
+      ],
+      "metadata": {
+        "id": "bXl3vVVbj-PF"
+      }
     },
     {
       "cell_type": "code",
