Criado através do Colab

--- a/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
+++ b/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
@@ -135,7 +135,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4256ee85-6e74-4322-fa05-9e79a1779dfd"
+        "outputId": "4e2a437b-be72-4341-cad4-07dcecfc2d5d"
       },
       "source": [
         "import pandas as pd\n",
@@ -144,15 +144,20 @@
         "import lazypredict\n",
         "from lazypredict.Supervised import LazyRegressor"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.utils.testing module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.utils. Anything that cannot be imported from sklearn.utils is now part of the private API.\n",
-            "  warnings.warn(message, FutureWarning)\n"
-          ],
-          "name": "stderr"
+            "/usr/local/lib/python3.11/dist-packages/dask/dataframe/__init__.py:42: FutureWarning: \n",
+            "Dask dataframe query planning is disabled because dask-expr is not installed.\n",
+            "\n",
+            "You can install it with `pip install dask[dataframe]` or `conda install dask`.\n",
+            "This will raise in a future version.\n",
+            "\n",
+            "  warnings.warn(msg, FutureWarning)\n"
+          ]
         }
       ]
     },
@@ -166,42 +171,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**NOW WE'RE GOING TO BE LOADING UP THE DATA SET AND WE'RE GOING TO BE DIRECT DOWNLOADING IT FROM THE GITHUB \"github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv\", **"
+      ],
+      "metadata": {
+        "id": "gknkdLzZmqLf"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oiess4VaZChk",
-        "outputId": "b9956d3a-6631-420c-b7d5-fc69ca407cff"
+        "outputId": "9ae2db50-4955-4ed4-99b3-ceceb5c90449"
       },
       "source": [
         "! wget https://github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--2021-01-22 14:57:46--  https://github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv\n",
-            "Resolving github.com (github.com)... 192.30.255.112\n",
-            "Connecting to github.com (github.com)|192.30.255.112|:443... connected.\n",
+            "--2025-02-03 11:48:22--  https://github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dataprofessor/data/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv [following]\n",
-            "--2021-01-22 14:57:46--  https://raw.githubusercontent.com/dataprofessor/data/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "--2025-02-03 11:48:22--  https://raw.githubusercontent.com/dataprofessor/data/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 8363909 (8.0M) [text/plain]\n",
             "Saving to: ‘acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv’\n",
             "\n",
-            "acetylcholinesteras 100%[===================>]   7.98M  46.7MB/s    in 0.2s    \n",
+            "acetylcholinesteras 100%[===================>]   7.98M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2021-01-22 14:57:47 (46.7 MB/s) - ‘acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv’ saved [8363909/8363909]\n",
+            "2025-02-03 11:48:23 (76.1 MB/s) - ‘acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv’ saved [8363909/8363909]\n",
             "\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**NOW WE'RE GOING TO DOWNLOAD IT AND NOW WE'RE GOING TO BE READING IN THE FILE AND THEN WE'RE GOING TO ASSIGNING IT TO THE \"df\" DATA FRAME:**"
+      ],
+      "metadata": {
+        "id": "mQQMHLrhpDOP"
+      }
     },
     {
       "cell_type": "code",
@@ -211,8 +234,17 @@
       "source": [
         "df = pd.read_csv('acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**NOW WE'RE GOING TO SPLITTING IT UP INTO THE \"X\" AND \"Y\" VARIABLES:**"
+      ],
+      "metadata": {
+        "id": "CM38lDyfp6DB"
+      }
     },
     {
       "cell_type": "code",
@@ -223,7 +255,7 @@
         "X = df.drop('pIC50', axis=1)\n",
         "Y = df.pIC50"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -236,19 +268,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**NOW LET'S TAKE A LOOK AT THE DIMENSION OF THE \"X\" VARIABLE **"
+      ],
+      "metadata": {
+        "id": "9QSOjoIOqurF"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CtC4SWpBaCVQ",
-        "outputId": "1008b65f-5b93-423a-b2bf-0695dc2014ec"
+        "outputId": "51f9f915-b3ae-4131-ec49-4b79540bb63c"
       },
       "source": [
         "# Examine X dimension\n",
         "X.shape"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,12 +298,20 @@
               "(4695, 881)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "metadata": {},
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ANALYSING THE ABOVE DIMENSION, WE CAN SEE THAT IT HAS A TOTAL OF 4695 ROWS OR THE NUMBER OF COMPOUNDS IN THE DATA SET AND IT HAS A TOTAL OF 881 DESCRIPTORS OR THE FEATURES OR THE NUMBER OF COLUMNS. AND SO THE 1ST THING THAT WE NEED TO DO, IS WE'RE GOING TO BE REMOVING THE LOW VARIANCE FEATURES,\n",
+        "SO THOSE THAT HAVE LOW VARIANCE.**"
+      ],
+      "metadata": {
+        "id": "4Dy1rb-mrOfd"
+      }
     },
     {
       "cell_type": "code",
@@ -297,6 +346,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**AND LET'S TAKE A LOOK AT THE DIMENSION OF THE DATA SET AGAIN. AND SO WE HAVE A REDUCED SUBSET FROM 881 TO BE 137 VARIABLES.\n",
+        "NOW WE'RE GOING TO BE PERFORMING A DATA SPLIT USING THE 80:20 RATIO.**"
+      ],
+      "metadata": {
+        "id": "tdhnDMqEt-jL"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MYck-_XeaHNZ"
@@ -316,6 +375,15 @@
       "source": [
         "## **4. Compare ML algorithms**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**NOW, COMES THE FUN PART SO AS WE CAN SEE HERE WE'RE GOING TO BE BUILDING MORE THEN 20 MACHINE LEARNING MODELS [1:15:25]**"
+      ],
+      "metadata": {
+        "id": "kRkiIyEPudTB"
+      }
     },
     {
       "cell_type": "code",
