Criado através do Colab

--- a/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
+++ b/python/CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
@@ -89,7 +89,7 @@
       "source": [
         "! pip install lazypredict"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "id": "FhmUOowT1NvQ",
         "outputId": "479cf3aa-19d9-46f8-aea4-1b6ce92c5b67"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +200,7 @@
         "import lazypredict\n",
         "from lazypredict.Supervised import LazyRegressor"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
       "source": [
         "! wget https://github.com/dataprofessor/data/raw/master/acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
       "source": [
         "df = pd.read_csv('acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
         "X = df.drop('pIC50', axis=1)\n",
         "Y = df.pIC50"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
         "# Examine X dimension\n",
         "X.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
         "X = selection.fit_transform(X)\n",
         "X.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
         "# Perform data splitting using 80/20 ratio\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         "models_train,predictions_train = clf.fit(X_train, X_train, Y_train, Y_train)\n",
         "models_test,predictions_test = clf.fit(X_train, X_test, Y_train, Y_test)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "# Performance table of the training set (80% subset)\n",
         "predictions_train"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1208,7 +1208,7 @@
         "# Performance table of the test set (20% subset)\n",
         "predictions_test"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1909,7 +1909,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"R-Squared\", data=predictions_train)\n",
         "ax.set(xlim=(0, 1))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1962,7 +1962,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"RMSE\", data=predictions_train)\n",
         "ax.set(xlim=(0, 10))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2024,7 +2024,7 @@
         "ax = sns.barplot(y=predictions_train.index, x=\"Time Taken\", data=predictions_train)\n",
         "ax.set(xlim=(0, 10))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2103,12 +2103,12 @@
       "cell_type": "markdown",
       "source": [
         "# **PART_6-MODEL DEPLOYMENT**\n",
-        "**SO IN THE NEXT CHAPTER, **PART_6**, WE'LL BE TAKING A LOOK ATHOW WE CAN TAKE MACHINE LEARNING OF THE BIOACTIVITY DATA SET AND CONVERT IT INTO A WEB APPLICATION THAT WE COULD DEPLY ON THE CLOUD THAT WILL ALLOW USERS TO BE ABLE TO MAKE PREDICTIONS ON OUR MACHINE LEARNING MODEL, FOR THE TARGET PROTEIN OF OUR INTEREST.\n",
+        "**SO IN THE NEXT CHAPTER, **PART_6**, WE'LL BE TAKING A LOOK ATHOW WE CAN TAKE MACHINE LEARNING OF THE BIOACTIVITY DATA SET AND CONVERT IT INTO A WEB APPLICATION THAT WE COULD DEPLOY ON THE CLOUD THAT WILL ALLOW USERS TO BE ABLE TO MAKE PREDICTIONS ON OUR MACHINE LEARNING MODEL, FOR THE TARGET PROTEIN OF OUR INTEREST.\n",
         "AND SO WITHOUT FURTHER DO, WED'LL START RIGHT NOW.\n",
         "\n",
         "SO THE 1ST THING WE'RE GONNA DO IS, GO TO THE BIOACTIVITY PREDICTION APP FOLDER (https://github.com/dataprofessor/bioactivity-prediction-app), AND SO THIS FOLDER WILL BE PROVIDED IN THE GITHUB LINK IN THE VIDEO DESCRIPTION AND SO BEFORE WE START LET US SHOW HOW THE APP LOOKS LIKE (SEE VIDEO [1:19:29]).\n",
         "\n",
-        "SO WE MUST CREATE (conda create --name dataprofessor) AND ACTIVATE ( conda activate dataprofessor) OUR CONDA ENVIRONMENT, WE MUST MAKE SURE TO ACTIVATE, (cd C:\\Users\\ferna\\BIOACTIVITY_PRED_APP\\bioactivity-prediction-app-main\\bioactivity-prediction-app-main)  **"
+        "SO (IN PROMPT) WE MUST CREATE (conda create --name dataprofessor) AND ACTIVATE (conda activate dataprofessor), IN OUR CONDA ENVIRONMENT. SO WE MUST MAKE SURE TO ACTIVATE IT. SO NEXT WE MUST ENTER IN THE CREATED FOLDER (cd C:\\Users\\ferna\\BIOACTIVITY_PRED_APP\\bioactivity-prediction-app-main\\bioactivity-prediction-app-main) (WE'VE ALREADY INSTALLED STREAMLIT IN OUR COMPUTER PATH: \"C:\\users\\ferna\\anaconda3\\Scripts\"), WE CAN SEE THE CONTENT OF THE FOLDER AND OBSERVE THAT THE FILE \"app.py\" THAT WILL BE THE APPLICATION (IS PRESENT), AND SO .  **"
       ],
       "metadata": {
         "id": "0e5-EOza7TcK"
