--- a/Cópia_de_CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
+++ b/Cópia_de_CDD_ML_Part_5_Acetylcholinesterase_Compare_Regressors.ipynb
@@ -2197,7 +2197,7 @@
         "\n",
         "\n",
         ") IS GOING TO BE SUBSET OF THE DESCRIPTOR THAT IS \"READ FROM THE PREVIOUSLY BUILT MODEL\" FROM THE FILE DESCRIPTOR LIST CSV \"'descriptor_list.csv'\". AND WE CAN SEE IN THIS LINES OF CODE, THAT WE'RE GOING TO CREATE A VARIABLE CALLED \" Xlist =....\",  AND THEN WE'RE READING IN THE COLUMNS. AND THEN WE'RE GOING TO BE FROM THE INITIAL DESCRIPTOR OF 881 FINGERPRINTS, WE'RE GOING TO BE SELECTING A SUBSET PROVIDED IN THE \" Xlist = ...\" AND THEN WE ASSIGN THE SUBSET OF DESCRIPTOR WHICH IS THE SUBSET OF THE DESCRIPTOR \"desc_subset = desc[Xlist]\" WHICH IS 218 DESCROPTORS SELECTED FROM THE INITIALLY SET OF 881 [1:41:45] AND THEN WE ASSIGNED THAT TO THE \"desc_subset\"  VARIABLE AND THEN FINALJY WE PRINT IT OUT AS A DATGFRAME AND WE ALSO PRINT OUT THE DIMENSION AS WELL. SO WE CAN SEE HERE IN WEB APP \"Subset of descriptors from previously built models\" THAT THERE ARE 5 MOLECULES AND 218 COLUMNS OR 218 FINGERPRINTS AND FINALLY WE MAKE USE OF THE CALCULATED MOLECULAR DESCRIPTOR SUBSET AND USE IT AS AN INPUT AN INPUT ARGUMENT TO THE BUILD MODEL FUNCTION IN LINE 85 \"build_model(desc_subset)\"\n",
-        " AND THEN AS WE HAVE MENTIONED EARLIER ON IT  \n",
+        " AND THEN AS WE HAVE MENTIONED EARLIER ON IT WE'LL BE BUILDING THE MODEL AND THEN FINALLY IT WILL BE DISPLAYING THE MODEL PREDICTION RESULT ON WEB APP THROUGH LINK \"Download Predictions\" IN THE BOTTOM OF THE WEB APP'S SCREEN,  THE USERS CAN DOWNLOAD IT INTO THEIR OWN COMPUTER.  \n",
         "\n",
         "    **"
       ],
